[package]
name = "copytrader-pro"
version = "1.0.0"
edition = "2021"
description = "CopyTrade Pro - Tauri"
authors = ["DAAVFX"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
